fix: 🐛 Add z-index on user search results to prevent then from going behind users

--- a/src/pages/ComparePage.scss
+++ b/src/pages/ComparePage.scss
@@ -23,6 +23,7 @@
       padding: 0;
       max-height: 20rem;
       overflow: auto;
+      z-index: 2;
     }
 
     li {
